--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <p class="a">Some Text</p>
+
+    <img src="photos/photo.png" class="b">
+
+    <table class="c">
+      <tr>
+        <th>The</th>
+        <th>Table</th>
+      </tr>
+      <tr>
+        <td>Peter</td>
+        <td>Griffin</td>
+      </tr>
+      <tr>
+        <td>Lois</td>
+        <td>Griffin</td>
+      </tr>
+    </table>
+
     <script src="script.js"></script>
   </body>
 </html>
