--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <p class="a">Some Text</p>
 
-    <img src="photos/photo.png" class="b">
+    <img src="photos/photo.png" alt="justSomePhoto" class="b">
 
     <table class="c">
       <tr>
