--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <a href="index2.html">index2</a>
     <p class="a">Some Text</p>
 
     <img src="photos/photo.png" alt="justSomePhoto" class="b">
